src/styles/sections/glide.css
.glide {
  position: relative;
  font-size: 1rem;
}

.glide__track {
  height: 100%;
}

.glide__slides {
  height: 100%;
}

.glide__slide {
  border: 1px solid black;
  text-align: center;
  height: 100%;
  position: relative;
  z-index: 100;
  border: none;
}

.glide__overlay {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  color: white;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  z-index: 10;
  text-align: center;
  opacity: 0;
  transition: opacity 0.3s ease;
}

.glide__overlay-inner {
  background: rgba(0, 0, 0, 0.65);
  height: 100%;
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  box-shadow: 0 0 5px black;
}

.glide__overlay-header {
  font-size: 3.6em;
  margin-bottom: 2.5rem;
}

.glide__overlay-text {
  line-height: 1.5;
  margin-bottom: 6rem;
  max-width: 40rem;
  font-size: 1.6em;
}

.glide__slide--active .glide__overlay {
  opacity: 1;
}

.glide__slide-image {
  width: 100%;
  height: 100%;
}

.glide__arrow {
  border: none;
  font-size: 11px;
  position: absolute;
  top: 50%;
  cursor: pointer;
  height: 6rem;
  width: 6rem;
  line-height: 6rem;
  text-align: center;
  border: 1px solid black;
  font-size: 3rem;
  font-weight: 400;
  border: none;
  z-index: 100;

  transform: translateY(-50%);
  transition: filter 0.2s ease;
}

.glide__arrow:hover {
  filter: brightness(0.6);
}

.glide__arrow--left {
  left: 1rem;
}

.glide__arrow--right {
  right: 1rem;
}

@media all and (max-width: 1024px) {
  .glide__overlay-header {
    margin-bottom: 2rem;
  }
  .glide__overlay-text {
    margin-bottom: 2rem;
  }
}

@media all and (max-width: 901px) {
  .glide {
    height: 60rem;
  }
  .glide__overlay-inner {
    width: 100%;
  }

  .glide__overlay-header {
    margin-bottom: 4rem;
  }

  .glide__overlay-text {
    margin-bottom: 4rem;
  }
}

@media all and (max-width: 601px) {
  .glide {
    height: unset;
  }
  .glide__arrow {
    height: 3rem;
    width: 3rem;
    line-height: 3rem;
    font-size: 1.6rem;
  }

  .glide__arrow--left {
    left: 0;
  }

  .glide__arrow--right {
    right: 0;
  }

  .glide__overlay-text {
    padding: 0 4rem;
  }
  .glide__overlay-header {
    margin-bottom: 1rem;
  }
  .glide__overlay-text {
    margin-bottom: 1rem;
  }
}

